2006-07-20  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.5.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:

	Releasing gnonlin 0.10.5 "Beavis and Zidane"

2006-07-14  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.9.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	Release 0.10.9 of core and base

2006-06-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.10.8.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing core 0.10.8

2006-06-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.8.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.7.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing core and base

2006-05-15  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	Update module versions

2006-05-14  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.7.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.6.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	 Core and base releases

2006-05-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/images/rtpbin-nojrtp.png:
	* src/copy/images/rtpbin.png:
	* src/htdocs/documentation/rtp.xml:
	* src/htdocs/images/Makefile.am:
	* src/htdocs/images/rtp-gst.png:
	* src/htdocs/images/rtp-gst2.png:
	* src/htdocs/images/rtpbin-nojrtp.png:
	* src/htdocs/images/rtpbin.png:
	* src/htdocs/modules/modules.xml: