@@ -2,7 +2,7 @@
 <!ENTITY gst-plugins-version-stable "0.8.12">
 
 <!ENTITY gst-ffmpeg-version-stable "0.10.1">
-<!ENTITY gst-python-version-stable "0.10.4">
+<!ENTITY gst-python-version-stable "0.10.5">
 <!ENTITY gst-plugins-base-version-stable "0.10.9">
 <!ENTITY gst-plugins-good-version-stable "0.10.3">
 <!ENTITY gst-plugins-ugly-version-stable "0.10.3">
