@@ -1,0 +1,112 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-python</module>
+  <module-fancy>GStreamer Python bindings</module-fancy>
+  <name>My Little Poney wants some Funk</name>
+  <version>0.10.5</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Python Bindings.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+  </intro>
+  <features>
+    <feature>Now requires glib 2.8 or greater</feature>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+  </features>
+
+  <applications>
+  </applications>
+
+    <contributors>
+	<person>Andy Wingo</person>
+	<person>Edward Hervey</person>
+	<person>Johan Dahlin</person>
+	<person>Johan Rydberg</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Yuri Pankov</person>
+	<person>Артём Попов</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>319871</id>
+      <summary>drop GIL state lock when doing something that can cause a...</summary>
+    </bug>
+    <bug>
+      <id>338982</id>
+      <summary>python refcounting problems in gstpad.override</summary>
+    </bug>
+    <bug>
+      <id>313138</id>
+      <summary>Need to update constructors to use properties</summary>
+    </bug>
+    <bug>
+      <id>329075</id>
+      <summary>__gsignals__ doesn' t work in classes derived from gst.Pi...</summary>
+    </bug>
+    <bug>
+      <id>334548</id>
+      <summary>Proper use of PyTuple and PyList for return values</summary>
+    </bug>
+    <bug>
+      <id>339040</id>
+      <summary>[patch] Error domains from gsterror are not wrapped</summary>
+    </bug>
+    <bug>
+      <id>339248</id>
+      <summary>Wrapper for virtual method GstBaseTransform.get_unit_size</summary>
+    </bug>
+    <bug>
+      <id>339308</id>
+      <summary>MiniObject arguments for virtual methods shouldn't have t...</summary>
+    </bug>
+    <bug>
+      <id>339767</id>
+      <summary>An example of subclassing GstBaseTransform</summary>
+    </bug>
+    <bug>
+      <id>339938</id>
+      <summary>filesrc.py example still uses 0.8 API</summary>
+    </bug>
+    <bug>
+      <id>341114</id>
+      <summary>pygst.require uses asserts rather than real error checking</summary>
+    </bug>
+    <bug>
+      <id>341799</id>
+      <summary>patch to make gst-python work on OSes without dl.so</summary>
+    </bug>
+    <bug>
+      <id>342493</id>
+      <summary>audio-controller.py needs slight updates for 0.10</summary>
+    </bug>
+    <bug>
+      <id>343652</id>
+      <summary>gstfile.py sometimes results in &quot; *** glibc detected *** c...</summary>
+    </bug>
+  </bugs>
+</release>
